@@ -1,5 +1,2 @@
-logging=0
-msgprint=0
-[level2]
-127.0.0.1
-[level9]
+logging=1
+msgprint=1
